<resources>
    <string name="app_name">Degust Lanches</string>
    <string name="title">Degust Lanches</string>
    <string name="subtitle">Degust Delivery</string>
    <string name="start">Iniciar Pedido</string>
    <string name="cadastrse">Cadastre-se</string>
    <string name="wait">Aguarde...</string>
    <string name="no_connection">Sem Conexão</string>
    <string name="app_exit">Deseja Sair da Aplicação?</string>
    <string name="cliente_nao_cadastrado">Cliente Não Cadastrado.\nCadastrar-se!</string>
    <string name="informe_bairro">Informe o Bairro</string>
    <string name="title_activity_cardapio">Cardápio</string>
    <string name="title_activity_cadastro_cliente">Cadastro de Cliente</string>
    <string name="title_activity_dados_cliente">Dados do Cliente</string>
    <string name="title_activity_buscar_cliente">Cliente</string>
    <string name="error_geral">Error. Tente novamente mais tarde.</string>
    <string name="celular_invalido">Número de Celular Inválido</string>

    <string name="nome_tipo">Tipo</string>
    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="email">e-Mail</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Nº</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento(Apto, Sala, Casa etc)</string>
    <string name="ponto_referencia">Ponto de Referência</string>
    <string name="enviar">Enviar</string>
    <string name="salvar">Salvar</string>
    <string name="ok">OK</string>
    <string name="_ou_">OU</string>

    <string name="meus_dados">Meus Dados</string>
    <string name="meus_pedidos">Meus Pedidos</string>
    <string name="parceiros">Parceiros</string>
    <string name="chat">Chat</string>
    <string name="sair">Sair</string>
    <string name="aguarde">Aguarde...</string>

    <string name="sanduiches">Sanduíches</string>
    <string name="combos">Combos</string>
    <string name="pizzas">Pizzas</string>
    <string name="pasteis">Pasteis</string>
    <string name="bebidas">Bebidas</string>
    <string name="sushis">Sushis</string>
    <string name="acais">Açaí/Sorvetes</string>
    <string name="sucos_vitaminas">Sucos/Vitaminas</string>
    <string name="produtos">Produtos</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="foto">Foto</string>
    <string name="title_activity_menu_sanduiches">Sanduíches</string>
    <string name="title_activity_menu_combos">Combos</string>
    <string name="title_activity_menu_pizzas">Pizzas</string>
    <string name="title_activity_menu_pasteis">Pasteis</string>
    <string name="title_activity_menu_bebidas">Bebidas</string>
    <string name="title_activity_menu_sushis">Sushis</string>
    <string name="title_activity_menu_acais">Açaís e Sorvetes</string>
    <string name="title_activity_menu_sucos_vitaminas">Sucos e Vitaminas</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_endereco_entrega">Endereço de Entrega</string>
    <string name="unidade">Unidade</string>
    <string name="preco">Preço</string>

    <string name="forma_pagamento">Forma de Pagamento \n %s</string>
    <string name="forma_pagamento_dialog">Forma de Pagamento</string>
    <string name="troco_para">Troco Para\n R$ %.2f</string>
    <string name="troco_para_dialog">Troco Para</string>
    <string name="qtde_itens">Quantidade de Itens: %d</string>
    <string name="valor_total">Valor Total: R$ %.2f</string>
    <string name="taxa_entrega">Taxa Entrega: R$ %.2f</string>
    <string name="desconto">Desconto: R$ %.2f</string>
    <string name="valor_final">Valor Final: R$ %.2f</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="excluir">Excluir</string>
    <string name="observacoes">Observações</string>
    <string name="del_item">- Item</string>
    <string name="add_item">+ Item</string>
    <string name="retirar_ingrediente">Retirar Ingrediente</string>
    <string name="editar_observacoes">Editar Observação no Produto</string>
    <string name="adicionar_ingrediente">Adicionar Ingrediente</string>
    <string name="adicionar_cobertura_batata">Cobertura da Batata</string>
    <string name="title_activity_meus_pedidos">Meus Pedidos</string>
    <string name="msg_altera_endereco_entrega">Endereço de entrega alterado com sucesso.</string>
    <string name="pedido_numero">Pedido Nº</string>
    <string name="pedido_situacao">Situação: </string>
    <string name="pedido_data_hora">Data/Hora: </string>
    <string name="pedido_forma_pagamento">Pagamento: </string>
    <string name="pedido_troco_para">Troco Para: </string>
    <string name="pedido_endereco_entrega">Endereço para Entrega: </string>
    <string name="pedido_previsao_entrega">Previsão de Entrega: </string>
    <string name="pedido_cancela_pedido">Cancela Pedido</string>

    <string name="title_activity_chat">Chat</string>
    <string name="mensagem">Mensagem</string>
    <string name="settings">Configurações</string>
    <string name="notifica_chat">Notifica Chat</string>
    <string name="notifica_pedidos">Notifica Pedidos</string>
    <string name="notifica_promocoes">Notifica Promoções</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="notificacao_switch_off">Não</string>
    <string name="notificacao_switch_on">Sim</string>
    <string name="hora">Hora</string>
    <string name="versao">Versão App</string>
    <string name="btnQtde">Quantidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="tipo">Tipo</string>
    <string name="display">2</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="informar_recheio">Informe até 2 recheios</string>
    <string name="informar_acompanhamentos">Acompanhamentos</string>
    <string name="acompanhamentos">Acompanhamentos e Sabores</string>
    <string name="valor">Valor</string>
    <string name="calcular">Calcular</string>
    <string name="calculo_gramas">0 gramas</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_menu_variedades">Variedades</string>
    <string name="variedades">Variedades</string>
    <string name="title_activity_menu_sushi_tipo">Sushi - Tipo</string>
</resources>
