<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredientes"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/observacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observacoes"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/preco"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>