<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/custumerborderdark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNomeTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_tipo"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewIngredientesTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredientes"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayoutObservacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/textViewObservacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/observacoes"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/imageButtonDelObs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/excluir"
            android:gravity="end"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_close_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/preco"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonAddIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/add_item"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_add_item" />

        <ImageButton
            android:id="@+id/imageButtonDelIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/del_item"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_remove_item" />

        <ImageButton
            android:id="@+id/imageButtonAddObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/observacoes"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_playlist_edit" />

        <ImageButton
            android:id="@+id/imageButtonDelItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/excluir"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_del_item" />

    </LinearLayout>

</LinearLayout>