<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end">

    <Button
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:textSize="24sp"
        android:id="@+id/decrement"
        android:text="@string/decrement"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/display"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/border_edit"
        android:editable="false"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/display"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:textSize="24sp"
        android:id="@+id/increment"
        android:text="@string/increment"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

</LinearLayout>