<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menubg"
    android:orientation="vertical"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/circulo"
            android:text="@string/_ou_"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/nome"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/ingredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredientes"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"/>

    <ImageView
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/foto"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bg_toolbar_main" />

    <br.com.daciosoftware.degustlanches.util.NestedListView
        android:id="@+id/listViewPrecos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"/>

</LinearLayout>